# abai

./: README.md
Box2DSource/Testbed/: CMakeLists.txt  CMakeLists.txt~
Box2DSource/Testbed/Framework/: Main.cpp  Test.cpp
Box2DSource/Testbed/Tests/: AI.cpp  AI.h  AngryBirds.h  AngryBirds.h~  Geometry.cpp  Geometry.h  Graph.cpp  Graph.h  KRR.cpp  KRR.h  Level.cpp  Level.h  Level1_1.cpp  LevelStaticsClass.h  Material.cpp  Material.cpp~  Material.h  Material.h~  Object.cpp  Object.cpp~  Object.h  Object.h~  ObjectStaticsClass.h  Shape.cpp  Shape.cpp~  Shape.h  Shape.h~  TargetManagement.cpp  TargetManagement.h  TestEntries.cpp  TestEntries.cpp~  abback.cpp
Box2DSource/Testbed/Tests/json/: allobjs.txt  genStatsOld.txt  generateStatics.py  generateStatics.py~  levelsout.txt  parseLevel.py  staticsout.txt
Box2DSource/Testbed/Tests/levels/: Level1-20.json  Level1_1.cpp  Level1_1.h  levelsout.txt  parseLevel.py
